--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <span class='icon-bar'></span>
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
-      <i class="fa fa-users inverse"></i>
+      <i class="fa fa-users"></i>
       Dev Match
       <% end %>
     </div>
